Fix #2641 Add text-align: center to #legacy-modal p.

--- a/frontend/src/styles/modules/_modals.scss
+++ b/frontend/src/styles/modules/_modals.scss
@@ -38,6 +38,7 @@
   p {
     font-size: $font-unit * 1.5;
     margin: 0 $grid-unit * -.5 $grid-unit;
+    text-align: center;
 
     &:last-child {
       margin-bottom: 0;
